# Piece_of_Pi

./: .gitignore  README.md  init_pop.sh
PoP/: .start_server.sh.swp  CMakeLists.txt  build.sh  start_client.sh  start_server.sh  toolchain-arm64.cmake
PoP/build-arm64/: CMakeCache.txt  Makefile  cmake_install.cmake
PoP/build-arm64/client/: Makefile  cmake_install.cmake
PoP/build-arm64/common/: Makefile
PoP/build-arm64/lib/buzzer/: Makefile
PoP/build-arm64/lib/cds/: Makefile  cmake_install.cmake
PoP/build-arm64/lib/game/: Makefile  cmake_install.cmake
PoP/build-arm64/lib/led/: Makefile
PoP/build-arm64/lib/segment/: Makefile
PoP/build-arm64/server/: Makefile  pop_server
PoP/build-x86/: CMakeCache.txt  Makefile  cmake_install.cmake
PoP/build-x86/client/: Makefile  client  cmake_install.cmake
PoP/build-x86/common/: Makefile
PoP/build-x86/lib/buzzer/: Makefile  cmake_install.cmake
PoP/build-x86/lib/cds/: Makefile  cmake_install.cmake
PoP/build-x86/lib/game/: Makefile  (+1 more)
PoP/build-x86/server/: Makefile  cmake_install.cmake
PoP/client/: CMakeLists.txt  client.c  client.h
PoP/client/pi_web/: PoP.html  style.css
PoP/common/: CMakeLists.txt  utils.c  utils.h
PoP/lib/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
PoP/lib/cds/: CMakeLists.txt  cds.c  cds.h
PoP/lib/game/: CMakeLists.txt  game.c  game.h
PoP/lib/led/: CMakeLists.txt  led.c  led.h
PoP/lib/segment/: CMakeLists.txt  segment.c  segment.h
PoP/lib/sensor/: CMakeLists.txt
PoP/server/: CMakeLists.txt  command.c  main.c  web_server.c
PoP/server/include/: command.h  web_server.h
(+2 files in other folders)
